force-app/main/default/objects/Test_Script_PMT__c/Test_Script_PMT__c.object-meta.xml
<CustomObject>
    <label>Test Script</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>