force-app/main/default/objects/Test_Script_PMT__c/fields/Detail_PMT__c.field-meta.xml
<CustomField>
    <fullName>Detail_PMT__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>