force-app/main/default/objects/Test_Script_PMT__c/fields/Sequence_PMT__c.field-meta.xml
<CustomField>
    <fullName>Sequence_PMT__c</fullName>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>