force-app/main/default/objects/Test_Script_PMT__c/fields/Status_PMT__c.field-meta.xml
<CustomField>
    <fullName>Status_PMT__c</fullName>
    <defaultValue>&quot;Passed&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>