force-app/main/default/objects/Test_Script_PMT__c/fields/Test_Scenario_PMT__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario_PMT__c</fullName>
    <label>Test Scenario</label>
    <referenceTo>Test_Scenario_PMT__c</referenceTo>
    <relationshipLabel>Test Script</relationshipLabel>
    <relationshipName>Test_Script</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>